--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     margin: 0;
 }
 body {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     margin: 0 auto;
     user-select: none;
 }
@@ -9,6 +10,9 @@ body {
     padding-top: 250px;
     max-width: 800px;
     margin: 0 auto;
+}
+.display__none {
+    display: none;
 }
 h1 {
     text-align: center;
@@ -21,10 +25,21 @@ h1 {
     text-align: center;
     column-gap: 20px;
     row-gap: 20px;
+    margin-bottom: 30px;
 }
 
 button {
+    width: 100px;
     margin-left: 350px;
+}
+#submit {
+    margin-bottom: 25px;
+}
+
+.percent__result { 
+    margin-top: 35px;
+    text-align: center;
+    font-style: italic;
 }
 
 /* #result {
