--- a/style.css
+++ b/style.css
@@ -27,8 +27,11 @@ h1 {
     row-gap: 20px;
     margin-bottom: 30px;
 }
-
+input {
+    border-radius: 5px;
+}
 button {
+    height: 25px;
     background-color: sandybrown;
     cursor: pointer;
     border-radius: 5px;
@@ -36,11 +39,17 @@ button {
     width: 100px;
 
 }
+
+button:hover {
+    box-shadow: 2px 2.5px 2.5px rgba(0, 0, 0, 0.5);
+    transition: 0.3s;
+}
 #submit {
     margin-bottom: 25px;
 }
 
-.percent__result { 
+.percent__result {
+    text-decoration: underline;
     color: red;
     margin-top: 35px;
     text-align: center;
@@ -49,7 +58,7 @@ button {
 
 @media screen and (max-width : 1300px) {
     button {
-        height: 15px;
+        height: 25px;
         margin-left: 60px;
     }
     .container {
