--- a/style.css
+++ b/style.css
@@ -39,6 +39,12 @@ button {
     width: 100px;
 
 }
+.background__green {
+    background-color: seagreen;
+}
+.text__white {
+    color: white;
+}
 
 button:hover {
     box-shadow: 2px 2.5px 2.5px rgba(0, 0, 0, 0.5);
