--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
     display: none;
 }
 h1 {
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2) ;
     text-align: center;
     margin-bottom: 25px;
 }
@@ -28,7 +29,11 @@ h1 {
     margin-bottom: 30px;
 }
 input {
+    box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.2);
     border-radius: 5px;
+}
+input::placeholder {
+    font-style: italic;
 }
 button {
     height: 25px;
