--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ h1 {
     margin-bottom: 30px;
 }
 input {
+    max-width: 300px;
     box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.2);
     border-radius: 5px;
 }
@@ -35,8 +36,11 @@ input::placeholder {
     font-style: italic;
 }
 .buttons {
-    align-items: center;
-    flex-direction: column;
+    flex-wrap: wrap;
+    max-width: 250px;
+    margin: 0 auto;
+    justify-content: space-between;
+    flex-direction: row;
     display: flex;
 }
 button {
@@ -70,6 +74,9 @@ button:disabled {
 #percent {
     margin-bottom: 25px;
 }
+#big-result {
+    margin: 0 auto;
+}
 
 .percent__result {
     font-weight: bold;
@@ -99,11 +106,11 @@ button:disabled {
         max-width: 800px;
     }
     .buttons {
-        justify-content: space-around;
-        flex-direction: row;
+        align-items: center;
+        flex-direction: column;
     }
     #big-result {
-        align-self: flex-start;
+
     }
 }  
 
