--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 }
 .container {
     padding-top: 100px;
-    /* max-width: 500px; */
+    max-width: 360px;
     margin: 0 auto;
 }
 .display__none {
