--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ h1 {
     margin-bottom: 30px;
 }
 input {
-    max-width: 300px;
+    max-width: 100px;
     box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.2);
     border-radius: 5px;
 }
@@ -114,6 +114,9 @@ button:disabled {
     }
     #big-result {
 
+    }
+    input {
+        max-width: none;
     }
 }  
 
