--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     margin: 0;
 }
 body {
+    position: relative;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     user-select: none;
 }
@@ -11,6 +12,11 @@ body {
 }
 .display__none {
     display: none;
+}
+.percentage-value {
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 h1 {
     text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2) ;
@@ -117,6 +123,40 @@ button:disabled {
     input {
         max-width: none;
     }
+    .percentage-value {
+        font-style: italic;
+        font-size: 20px;
+        background-color: white;
+        z-index: 1000;
+        box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+        position: absolute;
+        border: 1px solid rgba(0, 0, 0, 0.2);
+        top: 50px;
+        left: 0;
+    }
+    .percentage-value_list{
+        margin-right: 15px;
+    }
+    .percentage-value_list span{
+        color: red;
+        font-weight: bold;
+    }
+    .percentage-value_btn {
+        background: url(./Vector\(Stroke\).svg) no-repeat center;
+        transform: rotate(-90deg);
+        position: absolute;
+        top: -50px;
+        left: 0;
+        width: 50px;
+        height: 50px;
+        border: 1px solid rgba(0, 0, 0, 0.2);
+        background-color: sandybrown;
+        border-radius: 50%;
+    }
+    .clicked {
+        transform: rotate(90deg);
+    }
+    
 }  
 
 
