--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
     margin: 0 auto;
 }
 .display__none {
+    opacity: 0;
     display: none;
 }
 .percentage-value {
@@ -104,6 +105,44 @@ button:disabled {
     text-align: center;
     background-color: seagreen;
 }
+.percentage-value {
+    opacity: 1;
+    font-style: italic;
+    font-size: 20px;
+    background-color: white;
+    z-index: 1000;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+    position: absolute;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    top: 50px;
+    left: 0;
+}
+.percentage-value_list{
+    margin-right: 15px;
+}
+.percentage-value_list span{
+    color: red;
+    font-weight: bold;
+}
+.percentage-value_btn {
+    transition: 1s all;
+    background: url(./Vector\(Stroke\).svg) no-repeat center;
+    transform: rotate(-90deg);
+    position: absolute;
+    top: -50px;
+    left: 0;
+    width: 50px;
+    height: 50px;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    background-color: sandybrown;
+    border-radius: 50%;
+}
+.clicked {
+    transition: 0.5s all;
+    transform: rotateX(180deg);
+    transform: rotate(90deg);
+
+}
 
 @media all and (min-width : 1300px) {
     button {
@@ -124,6 +163,7 @@ button:disabled {
         max-width: none;
     }
     .percentage-value {
+        opacity: 1;
         font-style: italic;
         font-size: 20px;
         background-color: white;
@@ -142,6 +182,7 @@ button:disabled {
         font-weight: bold;
     }
     .percentage-value_btn {
+        transition: 1s all;
         background: url(./Vector\(Stroke\).svg) no-repeat center;
         transform: rotate(-90deg);
         position: absolute;
@@ -154,7 +195,10 @@ button:disabled {
         border-radius: 50%;
     }
     .clicked {
+        transition: 0.5s all;
+        transform: rotateX(180deg);
         transform: rotate(90deg);
+
     }
     
 }  
